AB#11765 Refactor popover CSS

--- a/interfaces/IBF-dashboard/src/app/components/forgot-password-popover/forgot-password-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/forgot-password-popover/forgot-password-popover.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card class="popover-window-card">
   <ion-card-header color="ibf-primary">
     <ion-icon
       name="close-circle"
