--- a/interfaces/IBF-dashboard/src/app/components/video-popover/video-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/video-popover/video-popover.component.html
@@ -1,4 +1,4 @@
-<ion-card data-test="video-popover">
+<ion-card data-test="video-popover" class="popover-window-card">
   <ion-card-header color="ibf-primary">
     <ion-icon
       name="close-circle"
