--- a/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
@@ -1,4 +1,4 @@
-<ion-card>
+<ion-card class="popover-window-card">
   <ion-card-header color="ibf-primary">
     <ion-icon
       class="ibf-layer-control-popover-icon"
