fix: person avatar login page width AB#9122

--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -59,7 +59,7 @@
           <app-timestamp class="ion-margin-end"></app-timestamp>
         </ion-card>
         <ion-card class="ibf-login-card">
-          <ion-icon name="person"></ion-icon>
+          <ion-icon name="person" class="person"></ion-icon>
           <ion-card-content>
             <app-login-form></app-login-form>
           </ion-card-content>
