--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.scss
@@ -57,6 +57,10 @@ ion-content {
     padding: 6px;
     position: absolute;
     right: -48px;
+
+    &.person {
+      font-size: 34px !important;
+    }
   }
 }
 
