feat: move 'today' to right

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.html
@@ -109,7 +109,7 @@
                   <app-disaster-type></app-disaster-type>
                 </ion-button>
                 <ion-button
-                  slot="start"
+                  slot="end"
                   class="today-button ion-no-margin"
                   [disabled]="true"
                   color="ibf-white"
@@ -120,8 +120,6 @@
                   ></span>
                 </ion-button>
                 <ion-button
-                  expand="full"
-                  fill="solid"
                   slot="end"
                   class="today-date-button ion-no-margin ion-no-padding"
                   [disabled]="true"
