feat: change password popover AB#11245 AB#11244

--- a/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/layer-control-info-popover/layer-control-info-popover.component.html
@@ -6,6 +6,7 @@
       size="large"
       (click)="closePopover()"
       data-test="close-matrix-icon"
+      class="popover-close-button"
     ></ion-icon>
     <ion-card-title>
       {{ layer.label }}
