--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -24,7 +24,11 @@
     >Logged In As:</ion-title
   >
   <ion-title size="small" data-test="user-display-name">
-    <strong>{{ authService.displayName }}</strong>
+    <strong
+      (click)="presentPopover()"
+      style="cursor: pointer; text-decoration: underline"
+      >{{ authService.displayName }}</strong
+    >
   </ion-title>
 </span>
 
