--- a/interfaces/IBF-dashboard/src/app/components/video-popover/video-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/video-popover/video-popover.component.html
@@ -4,6 +4,7 @@
       name="close-circle"
       size="large"
       (click)="closePopover()"
+      class="popover-close-button"
     ></ion-icon>
     <ion-card-title>IBF Video Guide</ion-card-title>
   </ion-card-header>
