--- a/interfaces/IBF-dashboard/src/global.scss
+++ b/interfaces/IBF-dashboard/src/global.scss
@@ -204,7 +204,7 @@
   border: 2px solid var(--ion-color-ibf-primary);
   margin: 0;
 
-  ion-icon {
+  .popover-close-button {
     cursor: pointer;
     position: absolute;
     right: 10px;
