--- a/interfaces/IBF-dashboard/src/app/components/forgot-password-popover/forgot-password-popover.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/forgot-password-popover/forgot-password-popover.component.html
@@ -4,6 +4,7 @@
       name="close-circle"
       size="large"
       (click)="closePopover()"
+      class="popover-close-button"
     ></ion-icon>
     <ion-card-title>Forgot password?</ion-card-title>
   </ion-card-header>
