fix: today button no rounded corners AB#11753

--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/dashboard.page.scss
@@ -44,6 +44,7 @@ app-export-view {
   width: 90px;
   text-transform: uppercase;
   --box-shadow: none;
+  --border-radius: 0;
 }
 
 // The lay-out of the `ion-content`-area of the page/screen
