--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -1,49 +1,65 @@
-<span class="ion-float-start">
-  <ion-title
-    class="center-heading"
-    size="medium"
-    data-test="heading-display-name-label"
-  >
-    <span>
-      IBF PORTAL <strong>{{ countryName }} </strong>
-      <strong [ngClass]="{ active: activeTriggerMsg === 'TRIGGERED' }">
-        {{ disasterType }} {{ activeTriggerMsg }}
-      </strong>
-      <ion-icon
-        *ngIf="activeTriggerMsg === 'TRIGGERED'"
-        class="ibf"
-        src="/assets/icons/Alert_Title_Purple.svg"
-        slot="start"
-        class="containerTwo"
-      ></ion-icon>
-    </span>
-  </ion-title>
-</span>
-<span class="ion-float-end" *ngIf="isLoggedIn">
-  <ion-title size="small" data-test="user-display-name-label"
-    >Logged In As:</ion-title
-  >
-  <ion-title size="small" data-test="user-display-name">
-    <strong
-      (click)="presentPopover()"
-      style="cursor: pointer; text-decoration: underline"
-      >{{ authService.displayName }}</strong
-    >
-  </ion-title>
-</span>
+<ion-grid>
+  <ion-row class="ion-justify-content-between ion-align-items-center">
+    <div>
+      <ion-title
+        class="uppercase-text"
+        size="medium"
+        data-test="heading-display-name-label"
+      >
+        <span>
+          IBF PORTAL <strong>{{ countryName }} </strong>
+          <strong [ngClass]="{ active: activeTriggerMsg === 'TRIGGERED' }">
+            {{ disasterType }} {{ activeTriggerMsg }}
+          </strong>
+          <ion-icon
+            *ngIf="activeTriggerMsg === 'TRIGGERED'"
+            class="ibf"
+            src="/assets/icons/Alert_Title_Purple.svg"
+            slot="start"
+            class="containerTwo"
+          ></ion-icon>
+        </span>
+      </ion-title>
+    </div>
+    <div class="ion-align-items-center">
+      <ion-row class="ion-align-items-center">
+        <ion-button
+          *ngIf="isLoggedIn"
+          type="button"
+          [title]="'Log Out'"
+          [attr.aria-label]="'Log Out'"
+          size="small"
+          fill="solid"
+          color="ibf-primary"
+          (click)="doLogout()"
+          data-test="logout-button"
+        >
+          <span class="ion-hide-sm-down">Log Out</span>
+          <ion-icon name="log-out" slot="end"></ion-icon>
+        </ion-button>
 
-<ion-button
-  *ngIf="isLoggedIn"
-  class="ion-float-end"
-  type="button"
-  [title]="'Log Out'"
-  [attr.aria-label]="'Log Out'"
-  size="small"
-  fill="solid"
-  color="ibf-primary"
-  (click)="doLogout()"
-  data-test="logout-button"
->
-  <span class="ion-hide-sm-down">Log Out</span>
-  <ion-icon name="log-out" slot="end"></ion-icon>
-</ion-button>
+        <ion-item lines="none">
+          <ion-col class="ion-no-padding">
+            <ion-title
+              size="small"
+              data-test="user-display-name-label"
+              class="ion-no-padding"
+              >Logged In As:</ion-title
+            >
+            <ion-title
+              size="small"
+              data-test="user-display-name"
+              class="ion-no-padding"
+            >
+              <strong
+                (click)="presentPopover()"
+                style="cursor: pointer; text-decoration: underline"
+                >{{ authService.displayName }}</strong
+              >
+            </ion-title>
+          </ion-col>
+        </ion-item>
+      </ion-row>
+    </div>
+  </ion-row>
+</ion-grid>
