--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.scss
@@ -1,9 +1,4 @@
-.center-heading {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding-top: 7px;
+.uppercase-text {
   text-transform: uppercase;
 }
 
