feat: move log lint to frontend AB#11829 AB#11935

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -17,6 +17,7 @@
       color="ibf-white"
     ></app-about-btn>
     <app-video-guide-button color="ibf-white"></app-video-guide-button>
+    <app-activation-log-button></app-activation-log-button>
     <app-export-view class="ion-align-items-center"></app-export-view>
   </app-dialogue-turn>
 
