--- a/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/dashboard/activation-log/activation.log.page.html
@@ -1,7 +1,18 @@
 <div class="activation-log-container">
-  <div *ngFor="let activationLog of activationLogs">
-    <div class="activation-log-row">
-      {{ activationLog }}
-    </div>
-  </div>
+  <table class="ion-text" *ngIf="activationLogs" ngClass="ion-margin">
+    <thead *ngIf="activationLogs['headerData']">
+      <tr>
+        <th *ngFor="let header of activationLogs['headerData']">
+          {{ header }}
+        </th>
+      </tr>
+    </thead>
+    <tbody *ngIf="activationLogs['rowsData']">
+      <tr *ngFor="let row of activationLogs['rowsData']">
+        <td *ngFor="let data of row">
+          {{ data }}
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
