fix: correct ibf logo AB#11811

--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -15,7 +15,7 @@
       <ng-container *ngSwitchCase="allActors.system">
         <ion-icon
           class="system-avatar"
-          src="assets/icons/ibf-logo.svg"
+          src="assets/icons/IBF_Impact_Based_Forecast_Logo_32x32.svg"
         ></ion-icon>
       </ng-container>
       <ng-container *ngSwitchCase="allActors.self">
