--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.scss
@@ -14,7 +14,7 @@
 .dialogue-turn--actor {
   order: 1;
 
-  margin-top: 0.5em; // inner-padding of .dialogue-turn
+  margin-top: 10px;
   max-width: 20%;
 
   ion-avatar {
