--- a/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
+++ b/interfaces/IBF-dashboard/src/app/pages/login/login.page.html
@@ -40,7 +40,9 @@
           </ion-icon>
         </span>
         <ion-card class="ibf-welcome-card">
-          <ion-icon src="assets/icons/IBF_Impact_Based_Forecast_Logo_32x32.svg"></ion-icon>
+          <ion-icon
+            src="assets/icons/IBF_Impact_Based_Forecast_Logo_32x32.svg"
+          ></ion-icon>
           <ion-card-header>
             <ion-card-title [translate]="'login-page.welcome'">
             </ion-card-title>
