fix: remove triggered state from login page AB#12057

--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -9,7 +9,8 @@
         <span>
           IBF PORTAL <strong>{{ countryName }} </strong>
           <strong [ngClass]="{ active: activeTriggerMsg === 'TRIGGERED' }">
-            {{ disasterType }} {{ activeTriggerMsg }}
+            {{ disasterType }}
+            <span *ngIf="isLoggedIn">{{ activeTriggerMsg }}</span>
           </strong>
           <ion-icon
             *ngIf="activeTriggerMsg === 'TRIGGERED'"
