--- a/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/user-state/user-state.component.html
@@ -8,9 +8,11 @@
       >
         <span>
           IBF PORTAL <strong>{{ countryName }} </strong>
-          <strong [ngClass]="{ active: activeTriggerMsg === 'TRIGGERED' }">
-            {{ disasterType }}
-            <span *ngIf="isLoggedIn">{{ activeTriggerMsg }}</span>
+          <strong
+            *ngIf="isLoggedIn"
+            [ngClass]="{ active: activeTriggerMsg === 'TRIGGERED' }"
+          >
+            {{ disasterType }} {{ activeTriggerMsg }}
           </strong>
           <ion-icon
             *ngIf="activeTriggerMsg === 'TRIGGERED'"
