feat: floods triggered for 1 day X days in a row AB#12028

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -2,7 +2,7 @@
   <app-dialogue-turn [isWarn]="isWarn">
     <p
       [innerHTML]="
-        'chat-component.' + disasterCategory + 'warn-label.message'
+        'chat-component.' + disasterTypeName + '.warn-label.message'
           | translate
             : {
                 lastModelRunDate: lastModelRunDate,
@@ -12,7 +12,7 @@
     ></p>
     <app-about-btn
       [btnLabel]="
-        'chat-component.' + disasterCategory + 'about-button-label' | translate
+        'chat-component.' + disasterTypeName + '.about-button-label' | translate
       "
       color="ibf-white"
     ></app-about-btn>
@@ -28,7 +28,7 @@
   >
     <p
       [innerHTML]="
-        'chat-component.' + disasterCategory + 'no-event-no-trigger.welcome'
+        'chat-component.' + disasterTypeName + '.no-event-no-trigger.welcome'
           | translate
             : {
                 name: authService.displayName
@@ -47,8 +47,8 @@
         *ngIf="!event.startDateEvent"
         [innerHTML]="
           'chat-component.' +
-            disasterCategory +
-            'no-event-active-trigger.welcome'
+            disasterTypeName +
+            '.no-event-active-trigger.welcome'
             | translate
               : {
                   name: authService.displayName,
@@ -57,27 +57,29 @@
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName
+                  eventName: event.eventName,
+                  activeLeadTime: timelineService.activeLeadTime.split('-')[0]
                 }
         "
       ></p>
-      <!-- Event started -->
       <p
         *ngIf="event.startDateEvent"
         [innerHTML]="
           'chat-component.' +
-            disasterCategory +
-            'active-event-active-trigger.welcome'
+            disasterTypeName +
+            '.active-event-active-trigger.welcome'
             | translate
               : {
                   name: authService.displayName,
                   startDate: event.startDate,
+                  leadTime: event.firstLeadTimeLabel,
                   startDateEvent: event.startDateEvent,
                   timeOngoing: event.timeOngoing,
                   timeUnit: event.timeUnit,
                   disasterTypeLabel: disasterTypeLabel,
                   firstLeadTimeDate: event.firstLeadTimeDate,
-                  eventName: event.eventName
+                  eventName: event.eventName,
+                  activeLeadTime: timelineService.activeLeadTime.split('-')[0]
                 }
         "
       ></p>
@@ -89,7 +91,7 @@
   <app-dialogue-turn *ngIf="eventService.isOldEvent()" isConnected="true">
     <p
       [innerHTML]="
-        'chat-component.' + disasterCategory + 'active-event-no-trigger.welcome'
+        'chat-component.' + disasterTypeName + '.active-event-no-trigger.welcome'
           | translate
             : {
                 name: authService.displayName,
@@ -105,7 +107,7 @@
     <app-dialogue-turn isConnected="true">
       <p
         [translate]="
-          'chat-component.' + disasterCategory + 'active-event.instruction'
+          'chat-component.' + disasterTypeName + '.active-event.instruction'
             | translate
         "
       ></p>
@@ -135,7 +137,7 @@
             <ion-note
               size="small"
               [innerHTML]="
-                'chat-component.' + disasterCategory + 'active-event.exposed'
+                'chat-component.' + disasterTypeName + '.active-event.exposed'
                   | translate
                     : {
                         exposedNumber: area['actionsValue'] | number: '.0-0'
