--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -91,7 +91,9 @@
   <app-dialogue-turn *ngIf="eventService.isOldEvent()" isConnected="true">
     <p
       [innerHTML]="
-        'chat-component.' + disasterTypeName + '.active-event-no-trigger.welcome'
+        'chat-component.' +
+          disasterTypeName +
+          '.active-event-no-trigger.welcome'
           | translate
             : {
                 name: authService.displayName,
