--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -107,7 +107,7 @@
           <ion-col size-lg="10" size-md="10" size-xs="10">
             <ion-label
               [innerHTML]="
-                'chat-component.active-event.place-name'
+                'chat-component.' + disasterTypeName + '.active-event.place-name'
                   | translate
                     : { adminAreaLabel: adminAreaLabel, placeName: area.name }
               "
@@ -158,7 +158,7 @@
             type="submit"
             expand="block"
             class="submit-button"
-            [translate]="'chat-component.active-event.submit-button-label'"
+            [innerHTML]="'chat-component.' + disasterTypeName + '.active-event.submit-button-label' | translate"
           ></ion-button>
         </ion-row>
       </form>
@@ -167,7 +167,7 @@
         [disabled]="area.activeTrigger"
         color="ibf-primary"
         expand="block"
-        [translate]="'chat-component.active-event.close-event-button'"
+        [innerHTML]="'chat-component.' + disasterTypeName + '.active-event.close-event-button' | translate"
       ></ion-button>
     </app-dialogue-turn>
   </ng-container>
