fix: create event and timeline state subs AB#12291

--- a/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/areas-of-focus-summary/areas-of-focus-summary.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="eventService.state.activeEvent">
+<ng-container *ngIf="eventState?.activeEvent">
   <ion-row
     class="component-title"
     color="ibf-secondary"
