--- a/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/event-switcher/event-switcher.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="multipleActiveEvents()" class="containerDiv">
-  <div *ngFor="let event of eventService.state.events">
+  <div *ngFor="let event of eventState?.events">
     <div *ngIf="event.eventName === selectedEventName">
       <ion-button
         shape="block"
