--- a/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/dialogue-turn/dialogue-turn.component.html
@@ -7,7 +7,8 @@
     'is-self ion-justify-content-end': isSelf,
     'is-pending': animate && !isSpoken,
     'is-spoken': animate && isSpoken,
-    'is-warn': isWarn
+    'is-warn': isWarn,
+    'is-stopped': isStopped
   }"
 >
   <div class="dialogue-turn--actor">
