--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -83,7 +83,7 @@
   </app-dialogue-turn>
 
   <ng-container *ngIf="eventState?.activeEvent">
-    <app-dialogue-turn isConnected="true">
+    <app-dialogue-turn *ngIf="stoppedAreas.length === 0 && filteredAreas.length === 0" isConnected="true">
       <p
         [translate]="
           'chat-component.' + disasterTypeName + '.active-event.instruction'
