feat: closing events automatically is different from stopping AB#12617 AB#12616

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -83,7 +83,10 @@
   </app-dialogue-turn>
 
   <ng-container *ngIf="eventState?.activeEvent">
-    <app-dialogue-turn *ngIf="stoppedAreas.length === 0 && filteredAreas.length === 0" isConnected="true">
+    <app-dialogue-turn
+      *ngIf="stoppedAreas.length === 0 && filteredAreas.length === 0"
+      isConnected="true"
+    >
       <p
         [translate]="
           'chat-component.' + disasterTypeName + '.active-event.instruction'
