--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -84,9 +84,29 @@
 
   <ng-container *ngIf="eventState?.activeEvent">
     <app-dialogue-turn
-      *ngIf="stoppedAreas.length === 0 && filteredAreas.length === 0"
+      *ngIf="
+        activeAreas.length &&
+        filteredStoppedAreas.length === 0 &&
+        filteredActiveAreas.length === 0
+      "
       isConnected="true"
     >
+      <p
+        [translate]="
+          'chat-component.' + disasterTypeName + '.active-event.overview'
+            | translate
+              : {
+                  nrTriggeredAreas: activeAreas.length,
+                  adminAreaLabelPlural: adminAreaLabelPlural,
+                  actionIndicator: actionIndicatorLabel
+                }
+        "
+      ></p>
+      <ul>
+        <li *ngFor="let area of triggeredAreas">
+          <p>{{ area.name }} ({{ area.actionsValue | number: '.0-0' }})</p>
+        </li>
+      </ul>
       <p
         [translate]="
           'chat-component.' + disasterTypeName + '.active-event.instruction'
@@ -95,13 +115,45 @@
       ></p>
     </app-dialogue-turn>
     <app-dialogue-turn
-      *ngFor="let area of stoppedAreas; first as isFirst"
+      *ngIf="
+        stoppedAreas.length &&
+        filteredStoppedAreas.length === 0 &&
+        filteredActiveAreas.length === 0
+      "
+      isConnected="true"
+      [isStopped]="true"
+    >
+      <p
+        [translate]="
+          'chat-component.' + disasterTypeName + '.stopped-event.overview'
+            | translate
+              : {
+                  nrStoppedAreas: stoppedAreas.length,
+                  adminAreaLabelPlural: adminAreaLabelPlural,
+                  actionIndicator: actionIndicatorLabel
+                }
+        "
+      ></p>
+      <ul>
+        <li *ngFor="let area of stoppedAreas">
+          <p>{{ area.name }} ({{ area.actionsValue | number: '.0-0' }})</p>
+        </li>
+      </ul>
+      <p
+        [translate]="
+          'chat-component.' + disasterTypeName + '.stopped-event.instruction'
+            | translate
+        "
+      ></p>
+    </app-dialogue-turn>
+    <app-dialogue-turn
+      *ngFor="let area of filteredStoppedAreas; first as isFirst"
       [isConnected]="true"
       [isStopped]="true"
     >
       <p
         [innerHTML]="
-          'chat-component.' + disasterTypeName + '.stopped-event.intro'
+          'chat-component.' + disasterTypeName + '.stopped-event.area'
             | translate
               : {
                   placeCodeName: area.name,
@@ -114,7 +166,7 @@
     </app-dialogue-turn>
     <app-dialogue-turn
       actor="self"
-      *ngFor="let area of filteredAreas; first as isFirst"
+      *ngFor="let area of filteredActiveAreas; first as isFirst"
       [isConnected]="!isFirst"
     >
       <form (submit)="submitEapAction(area.placeCode)">
