fix: use active instead of triggered list AB#12628

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -103,7 +103,7 @@
         "
       ></p>
       <ul>
-        <li *ngFor="let area of triggeredAreas">
+        <li *ngFor="let area of activeAreas">
           <p>{{ area.name }} ({{ area.actionsValue | number: '.0-0' }})</p>
         </li>
       </ul>
