feat: only show EAP-actions of right month AB#12721

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -203,7 +203,7 @@
         </ion-row>
         <ion-list class="background-light">
           <ion-item
-            *ngFor="let action of area.eapActions"
+            *ngFor="let action of area.filteredEapActions"
             class="ion-no-padding"
           >
             <ion-checkbox
