--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -201,6 +201,31 @@
               "
             >
             </ion-note>
+            <br />
+            <div
+              *ngIf="disasterType?.disasterType === 'drought'"
+              class="ion-margin-bottom"
+            >
+              <ion-note
+                size="small"
+                *ngIf="area?.filteredEapActions as actions"
+              >
+                Due to
+                <span
+                  *ngIf="[12, 1, 2, 3].includes(timelineState?.today?.c?.month)"
+                  ><strong>the MAM forecast</strong> and
+                  <strong>the below average OND</strong></span
+                >
+                <span
+                  *ngIf="[7, 8, 9, 10].includes(timelineState?.today?.c?.month)"
+                  ><strong>the OND forecast</strong> and
+                  <strong>the below average MAM</strong></span
+                >
+                <span> and <strong>Failed harvest</strong> </span>
+                the following <strong>{{ actions.length }}</strong> actions
+                should be taken.
+              </ion-note>
+            </div>
           </ion-col>
         </ion-row>
         <ion-list class="background-light">
