feat: update chat OND, MAM text AB#12724

--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.html
@@ -202,28 +202,25 @@
             >
             </ion-note>
             <br />
-            <div
-              *ngIf="disasterType?.disasterType === 'drought'"
-              class="ion-margin-bottom"
-            >
+            <div *ngIf="isKenDrought()" class="ion-margin-bottom">
               <ion-note
                 size="small"
                 *ngIf="area?.filteredEapActions as actions"
               >
-                Due to
+                {{ 'chat-component.drought.ken-triggers.opening' | translate }}
                 <span
-                  *ngIf="[12, 1, 2, 3].includes(timelineState?.today?.c?.month)"
-                  ><strong>the MAM forecast</strong> and
-                  <strong>the below average OND</strong></span
+                  *ngFor="let trigger of kenDroughtTriggers(); last as isLast"
                 >
+                  <strong>{{ trigger }}</strong
+                  ><span *ngIf="!isLast"> and the </span>
+                </span>
+                {{ ' ' }}
                 <span
-                  *ngIf="[7, 8, 9, 10].includes(timelineState?.today?.c?.month)"
-                  ><strong>the OND forecast</strong> and
-                  <strong>the below average MAM</strong></span
-                >
-                <span> and <strong>Failed harvest</strong> </span>
-                the following <strong>{{ actions.length }}</strong> actions
-                should be taken.
+                  [innerHTML]="
+                    'chat-component.drought.ken-triggers.actions'
+                      | translate: { nrActions: actions.length }
+                  "
+                ></span>
               </ion-note>
             </div>
           </ion-col>
