--- a/interfaces/IBF-dashboard/src/app/components/chat/chat.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/chat/chat.component.scss
@@ -25,7 +25,7 @@ ion-content {
   font-size: small;
 }
 
-.clear-out-warning {
+.clear-out-message {
   color: var(--ion-color-danger);
   font-weight: bold;
 }
